apps/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/part-of: phoenyxlab
    app.kubernetes.io/managed-by: kustomize
spec:
  replicas: 0
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
        app.kubernetes.io/name: sonarr
        app.kubernetes.io/instance: sonarr
        app.kubernetes.io/part-of: phoenyxlab
        app.kubernetes.io/managed-by: kustomize
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.19
          ports:
            - containerPort: 8989
          livenessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /media
            - name: media
              mountPath: /shows
        - name: exportarr-sonarr
          image: ghcr.io/onedr0p/exportarr:v2.3.0
          args:
            - sonarr
          ports:
            - containerPort: 9707
              name: metrics
          livenessProbe:
            tcpSocket:
              port: 9707
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            tcpSocket:
              port: 9707
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: downloads
          hostPath:
            path: /downloads/qbittorrent
        - name: media
          hostPath:
            path: /media/tv
